--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
   <title>PaintJs</title>
 </head>
 <body>
@@ -24,18 +25,19 @@
           step="0.1">
       </div>
       <button id="jsMode">Fill</button>
+      <button id="jsclear">clear</button>
       <button id="jsSave">Save</button>
     </div>
     <div class="controls_colors id="jsColors">
-      <div class="controls_color" style="background-color: #2c2c2c;"></div>
-      <div class="controls_color" style="background-color: white;"></div>
-      <div class="controls_color" style="background-color: #FF3B30;"></div>
-      <div class="controls_color" style="background-color: #ff9500;"></div>
-      <div class="controls_color" style="background-color: #FFCC00;"></div>
-      <div class="controls_color" style="background-color: #4CD963;"></div>
-      <div class="controls_color" style="background-color: #5AC8FA;"></div>
-      <div class="controls_color" style="background-color: #0579FF;"></div>
-      <div class="controls_color" style="background-color: #5856D6;"></div>
+      <div class="controls_color js_color" style="background-color: #2c2c2c;"></div>
+      <div class="controls_color js_color" style="background-color: white;"></div>
+      <div class="controls_color js_color" style="background-color: #FF3B30;"></div>
+      <div class="controls_color js_color" style="background-color: #ff9500;"></div>
+      <div class="controls_color js_color" style="background-color: #FFCC00;"></div>
+      <div class="controls_color js_color" style="background-color: #4CD963;"></div>
+      <div class="controls_color js_color" style="background-color: #5AC8FA;"></div>
+      <div class="controls_color js_color" style="background-color: #0579FF;"></div>
+      <div class="controls_color js_color" style="background-color: #5856D6;"></div>
     </div>
   </div>
   
@@ -46,7 +48,6 @@
   
   
   
-  
-  <script src="app.js"></script>  
+    
 </body>
 </html>
